--- a/css/shiny-updates.css
+++ b/css/shiny-updates.css
@@ -60,3 +60,11 @@
 	margin: 0 8px 0 -2px;
 	vertical-align: top;
 }
+
+.active .activate-now {
+	display: none;
+}
+
+.inactive .deactivate-now {
+	display: none;
+}
